# minizip-archive-viewer

./: .gitignore  CMakeLists.txt  README.md  clickable_label.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  minizip_read_list.cpp  table_view_model.cpp  table_view_model.h
